html javascript css 확인

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,4 +1,12 @@
 <html>
     <h1>안녕하세요</h1>    
 </html>
-
+<style>
+    h1 {
+        color: red;
+        text-align: center;
+    }
+</style>
+<script>
+    alert('hello javascript in front');
+</script>
