--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -115,15 +115,15 @@
 					<div class="form-row-group with-icons">
 						<div class="form-row no-padding">
 							<i class="fa fa-user"></i>
-							<input type="text" name="aaa" class="form-element" placeholder="Username" value="john doe">
+							<input type="text" id="userName"  class="form-element" placeholder="Username" value="john doe">
 						</div>
 						<div class="form-row no-padding">
 							<i class="fa fa-envelope"></i>
-							<input type="email" name="aaa" class="form-element" placeholder="Email" value="johndoe@example.com">
+							<input type="email" id="userEmail" class="form-element" placeholder="Email" value="johndoe@example.com">
 						</div>
 						<div class="form-row no-padding">
 							<i class="fa fa-lock"></i>
-							<input type="password" name="aaa" class="form-element" placeholder="Password" value="123456">
+							<input type="password" id="userPassword" class="form-element" placeholder="Password" value="123456">
 						</div>
 					</div>
 					<div class="form-divider"></div>
@@ -155,7 +155,9 @@
 	<!-- Template global script file. requared all pages -->
 	<script src="js/global.script.js"></script>
 
-	
+    <script>
+        
+    </script>
 </body>
 
 </html>
