--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -128,7 +128,7 @@
 					</div>
 					<div class="form-divider"></div>
 					<div class="form-row">
-						<a href="#" class="button circle block orange">Sign Up</a>
+						<button type='button' class="button circle block orange">Sign Up</button type='button'>
 					</div>
 					<div class="form-row txt-center mt-15">
 						Already have an account? <a href="login.html" data-loader="show">Login</a>
@@ -156,7 +156,8 @@
 	<script src="js/global.script.js"></script>
 
     <script>
-        
+        var name = $("#userName").val();        
+        alert(name);
     </script>
 </body>
 
